--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>escobar banner</title>
     <link rel="stylesheet" href="style.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 
 <body>
@@ -36,6 +37,10 @@
             <span><img src="images/Heart.png" alt=""></span>
             <span><img src="images/Cart.png" alt=""></span>
             <span>Shopping cart: <br> $57.00</span>
+        </div>
+
+        <div class="mobile-menu-toggle">
+            <i class='bx bx-menu'></i>
         </div>
     </header>
 
@@ -341,6 +346,7 @@
     </div>
 
   </footer>
+  <script src="script.js"></script>
 </body>
 
 </html>
