--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ecobar Banner</title>
     <link rel="stylesheet" href="style.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 
 <body>
@@ -36,6 +37,10 @@
             <span><img src="images/Heart.png" alt=""></span>
             <span><img src="images/Cart.png" alt=""></span>
             <span>Shopping cart: <br> $57.00</span>
+        </div>
+        
+        <div class="mobile-menu-toggle">
+            <i class='bx bx-menu'></i>
         </div>
     </header>
 
@@ -400,7 +405,7 @@
                 <div><span>18 :</span><small><br>Mins</small></div>
                 <div><span>46</span><small><br>Secs</small></div>
             </div>
-            <button>Shop Now →</button>
+            <a href="product-details.html?id=sale-month" class="shop-now-btn" style="color: white; padding: 10px 20px; background: #00B207; border-radius: 30px; text-decoration: none; display: inline-block;">Shop Now →</a>
         </div>
 
         <!-- Card 2 -->
@@ -408,7 +413,7 @@
             <h4>85% FAT FREE</h4>
             <h2>Low-Fat Meat</h2>
             <p class="price">Started at <span>$79.99</span></p>
-            <button>Shop Now →</button>
+            <a href="product-details.html?id=low-fat-meat" class="shop-now-text" style="color: #1a1a1a; font-weight: bold; text-decoration: none;">Shop Now →</a>
         </div>
 
         <!-- Card 3 -->
@@ -416,7 +421,7 @@
             <h4>SUMMER SALE</h4>
             <h2>100% Fresh Fruit</h2>
             <p class="discount">Up to <span>64% OFF</span></p>
-            <button>Shop Now →</button>
+            <a href="product-details.html?id=fresh-fruit" class="shop-now-text" style="color: #1a1a1a; font-weight: bold; text-decoration: none;">Shop Now →</a>
         </div>
     </div>
 
@@ -462,28 +467,28 @@
             <!-- SMALL PRODUCT CARDS -->
             <div class="product-cardd">
                 <img src="images/chinese gabbage.png" alt="">
-                <h4>Chinese Cabbage</h4>
+                <a href="product-details.html?id=chanise-cabbage"><h4>Chinese Cabbage</h4></a>
                 <p class="price">$12.00</p>
                 <span class="stars">⭐⭐⭐⭐☆</span>
             </div>
 
             <div class="product-cardd">
                 <img src="images/green lettuce.png" alt="">
-                <h4>Green Lettuce</h4>
+                <a href="product-details.html?id=green-lettuce"><h4>Green Lettuce</h4></a>
                 <p class="price">$9.00</p>
                 <span class="stars">⭐⭐⭐⭐</span>
             </div>
 
             <div class="product-cardd">
                 <img src="images/egg plant.png" alt="">
-                <h4>Eggplant</h4>
+                <a href="product-details.html?id=eggplant"><h4>Eggplant</h4></a>
                 <p class="price">$34.00</p>
                 <span class="stars">⭐⭐⭐⭐</span>
             </div>
 
             <div class="product-cardd">
                 <img src="images/fresh couliflower.png" alt="">
-                <h4>Fresh Cauliflower</h4>
+                <a href="product-details.html?id=fresh-cauliflower"><h4>Fresh Cauliflower</h4></a>
                 <p class="price">$12.00</p>
                 <span class="stars">⭐⭐⭐⭐☆</span>
             </div>
@@ -491,48 +496,48 @@
             <div class="product-cardd">
                 <img src="images/green copsicum.png" alt="">
                 <span class="sale-badgee">Sale 50%</span>
-                <h4>Green Capsicum</h4>
+                <a href="product-details.html?id=green-capsicum"><h4>Green Capsicum</h4></a>
                 <p class="price">$9.00 <span class="old-price">$26.00</span></p>
                 <span class="stars">⭐⭐⭐⭐</span>
             </div>
 
             <div class="product-cardd">
                 <img src="images/green chili.png" alt="">
-                <h4>Green Chili</h4>
+                <a href="product-details.html?id=green-chili"><h4>Green Chili</h4></a>
                 <p class="price">$34.00</p>
                 <span class="stars">⭐⭐⭐⭐☆</span>
             </div>
 
             <div class="product-cardd">
                 <img src="images/big potatoes.png" alt="">
-                <h4>Big Potatoe</h4>
+                <a href="product-details.html?id=big-potatoes"><h4>Big Potatoe</h4></a>
                 <p class="price">$12.00</p>
                 <span class="stars">⭐⭐⭐⭐☆</span>
             </div>
             <div class="product-cardd">
                 <img src="images/corn.png" alt="">
-                <h4>Corn</h4>
+                <a href="product-details.html?id=corn"><h4>Corn</h4></a>
                 <p class="price">$12.00</p>
                 <span class="stars">⭐⭐⭐⭐☆</span>
             </div>
 
             <div class="product-cardd">
                 <img src="images/red chili.png" alt="">
-                <h4>Red Chili</h4>
+                <a href="product-details.html?id=red-chili"><h4>Red Chili</h4></a>
                 <p class="price">$12.00</p>
                 <span class="stars">⭐⭐⭐⭐☆</span>
             </div>
 
             <div class="product-cardd">
                 <img src="images/red tomatoe.png" alt="">
-                <h4>Red Tomatoes</h4>
+                <a href="product-details.html?id=red-tomatoes"><h4>Red Tomatoes</h4></a>
                 <p class="price">$9.00</p>
                 <span class="stars">⭐⭐⭐⭐☆</span>
             </div>
 
             <div class="product-cardd">
                 <img src="images/sunja mango.png" alt="">
-                <h4>Surjapur Mango</h4>
+                <a href="product-details.html?id=surjapur-mango"><h4>Surjapur Mango</h4></a>
                 <p class="price">$34.00</p>
                 <span class="stars">⭐⭐⭐⭐☆</span>
             </div>
@@ -943,6 +948,7 @@
 
     </footer>
 
+    <script src="script.js"></script>
 </body>
 
 </html>
