--- a/blog.html
+++ b/blog.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Escobar banner</title>
     <link rel="stylesheet" href="style.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
     <!-- nav-bar section -->
@@ -34,6 +35,10 @@
             <span><img src="images/Heart.png" alt=""></span>
             <span><img src="images/Cart.png" alt=""></span>
             <span>Shopping cart: <br> $57.00</span>
+        </div>
+
+        <div class="mobile-menu-toggle">
+            <i class='bx bx-menu'></i>
         </div>
     </header>
    
@@ -312,5 +317,6 @@
     </div>
 
   </footer>
+  <script src="script.js"></script>
 </body>
 </html>
