--- a/shop.html
+++ b/shop.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Escobar Banner</title>
     <link rel="stylesheet" href="style.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
     <!-- nav-bar section -->
@@ -35,6 +36,10 @@
             <span><img src="images/Heart.png" alt=""></span>
             <span><img src="images/Cart.png" alt=""></span>
             <span>Shopping cart: <br> $57.00</span>
+        </div>
+
+        <div class="mobile-menu-toggle">
+            <i class='bx bx-menu'></i>
         </div>
     </header>
 
@@ -339,6 +344,7 @@
     </div>
 
   </footer>
+  <script src="script.js"></script>
 </body>
 
 </html>
