made some changes

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 
         <div class="icons">
             <span><img src="images/Heart.png" alt=""></span>
-            <span><img src="images/Cart.png" alt=""></span>
-            <span>Shopping cart: <br> $57.00</span>
+            <a href="checkout.html" class="cart-icon-wrap"><img src="images/Cart.png" alt=""><span class="cart-badge" id="cart-count">0</span></a>
+            <span>Shopping cart: <br> <span id="cart-total">$57.00</span></span>
         </div>
         
         <div class="mobile-menu-toggle">
@@ -405,7 +405,7 @@
                 <div><span>18 :</span><small><br>Mins</small></div>
                 <div><span>46</span><small><br>Secs</small></div>
             </div>
-            <a href="product-details.html?id=sale-month" class="shop-now-btn" style="color: white; padding: 10px 20px; background: #00B207; border-radius: 30px; text-decoration: none; display: inline-block;">Shop Now →</a>
+            <a href="product.html" class="shop-now-btn" style="color: white; padding: 10px 20px; background: #00B207; border-radius: 30px; text-decoration: none; display: inline-block;">Shop Now →</a>
         </div>
 
         <!-- Card 2 -->
@@ -413,7 +413,7 @@
             <h4>85% FAT FREE</h4>
             <h2>Low-Fat Meat</h2>
             <p class="price">Started at <span>$79.99</span></p>
-            <a href="product-details.html?id=low-fat-meat" class="shop-now-text" style="color: #1a1a1a; font-weight: bold; text-decoration: none;">Shop Now →</a>
+            <a href="product.html" class="shop-now-text" style="color: #1a1a1a; font-weight: bold; text-decoration: none;">Shop Now →</a>
         </div>
 
         <!-- Card 3 -->
@@ -421,7 +421,7 @@
             <h4>SUMMER SALE</h4>
             <h2>100% Fresh Fruit</h2>
             <p class="discount">Up to <span>64% OFF</span></p>
-            <a href="product-details.html?id=fresh-fruit" class="shop-now-text" style="color: #1a1a1a; font-weight: bold; text-decoration: none;">Shop Now →</a>
+            <a href="product.html" class="shop-now-text" style="color: #1a1a1a; font-weight: bold; text-decoration: none;">Shop Now →</a>
         </div>
     </div>
 
@@ -552,7 +552,7 @@
             <h4>SUMMER SALE</h4>
             <h1>37% OFF</h1>
             <p>Free on all your order, Free Shipping and 30 days <br> money-back guarantee.</p>
-            <a href="#" class="btnnr">Shop Now →</a>
+            <a href="product.html" class="btnnr">Shop Now →</a>
         </div>
     </div>
 
