i redesigned the map icon

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <!-- nav-bar section -->
     <div class="top-bar">
         <div class="left">
-            <span><img src="images/Map Pin.png" alt=""> Store Location: Lincoln
+            <img src="images/Map Pin.png" alt="">
+            <span> Store Location: Lincoln
                 - 344, Illinois, Chicago, USA</span>
         </div>
         <div class="right">
@@ -28,8 +29,7 @@
             <span><img src="images/Logo.png" alt=""></span>
         </div>
         <div class="search-box">
-            <!-- <span class="srch-icon"><img src="images/search icon.png" alt=""></span> -->
-            <input type="text" placeholder="Search">
+            <input type="text" placeholder="Search" >
             <button>Search</button>
         </div>
 
