i made some changes in the style,index and contact

--- a/contact us.html
+++ b/contact us.html
@@ -108,7 +108,7 @@
 
                     <input type="text" class="full" placeholder="Subjects" rows="6">
 
-                    <button type="submit" class="btn">Send Message</button>
+                    <button type="submit" class="btnnr">Send Message</button>
                 </form>
             </div>
         </div>
