--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <h1>Fresh & Healthy <br> Organic Food</h1>
                 <p class="sale">Sale up to <span>30% OFF</span></p>
                 <p class="class-shipping">Free shipping on all your order.</p>
-                <button class="btn">Shop now</button>
+                <button class="bitn">Shop now</button>
             </div>
         </div>
         <div class="hero-right">
@@ -420,7 +420,7 @@
         <div class="promo-card yellow">
             <h4>SUMMER SALE</h4>
             <h2>100% Fresh Fruit</h2>
-            <p class="discount">Up to <span>64% OFF</span></p>
+            <!-- <p class="discount">Up to <span>64% OFF</span></p> -->
             <a href="product.html" class="shop-now-text" style="color: #1a1a1a; font-weight: bold; text-decoration: none;">Shop Now →</a>
         </div>
     </div>
@@ -552,7 +552,8 @@
             <h4>SUMMER SALE</h4>
             <h1>37% OFF</h1>
             <p>Free on all your order, Free Shipping and 30 days <br> money-back guarantee.</p>
-            <a href="product.html" class="btnnr">Shop Now →</a>
+            <!-- <a href="product.html" class="btnnr">Shop Now →</a> -->
+            <a href="product.html" class="shop-now-btn" style="color: white; padding: 10px 20px; background: #00B207; border-radius: 30px; text-decoration: none; display: inline-block;">Shop Now →</a>
         </div>
     </div>
 
@@ -618,8 +619,8 @@
                 <div class="app">
                     <div class="app1">
                         <p class="title">Chinese Cabbage</p>
-                        <p class="price">$12.00</p>
-                        <p class="price">$20.00</p>
+                        <p class="price">$12.00 <span>$20.00</span></p>
+                        <!-- <p class="price">$20.00</p> -->
                     </div>
                     <div class="cart-icon"><img src="images/Add To Cart.png" alt="">
                     </div>
@@ -690,7 +691,7 @@
             <div class="news-card">
                 <div class="img-box">
                     <img src="images/blue orange.png" alt="">
-                    <span class="date">18<br>NOV</span>
+                    <!-- <span class="date">18<br>NOV</span> -->
                 </div>
 
                 <div class="details">
@@ -708,7 +709,7 @@
             <div class="news-card">
                 <div class="img-box">
                     <img src="images/plate egg.png" alt="">
-                    <span class="date">29<br>JAN</span>
+                    <!-- <span class="date">29<br>JAN</span> -->
                 </div>
 
                 <div class="details">
@@ -726,7 +727,7 @@
             <div class="news-card">
                 <div class="img-box">
                     <img src="images/plate veggies.png" alt="">
-                    <span class="date">21<br>FEB</span>
+                    <!-- <span class="date">21<br>FEB</span> -->
                 </div>
 
                 <div class="details">
