i added javascript and change something in the style and touched the index.

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <div class="overlay1"></div>
             <div class="hero-text">
                 <h1>Fresh & Healthy <br> Organic Food</h1>
-                <p class="sale">Sale up to <span>30% OFF</span></p>
+                <!-- <p class="sale">Sale up to <span>30% OFF</span></p> -->
                 <p class="class-shipping">Free shipping on all your order.</p>
                 <button class="bitn">Shop now</button>
             </div>
@@ -433,115 +433,110 @@
             <a href="#" class="view-alll">View All →</a>
         </div>
 
-        <div class="deals-grid">
-            <div class="featured-cardd">
-                <div class="badge-row">
-                    <span class="badge red">Save 50%</span>
-                    <span class="badge blue">Best Offer</span>
-                    <img src="images/four apple.png" alt="Product Image">
-                </div>
-                <div>
-                    <button class="add-cartt">Add to Cart <img src="images/Add To Cart (1).png" alt=""></button>
-                </div>
+         <!-- PRODUCT CARDS -->
+          
+  <div class="products-grid">
 
-                <div>
-                    <div>
-                        <h3>Chinese Cabbage</h3>
-                        <p class="pricee">
-                            $12.00 <span class="old-price">$24.00</span>
-                        </p>
-                    </div>
-                </div>
-                <div class="starss">⭐⭐⭐⭐☆ (524 Feedback)</div>
-                <div>
-                    <p>Hurry up! Offer ends In:</p>
-                </div>
-                <div class="countdown">
-                    <div><span>01 :</span><small>Days</small></div>
-                    <div><span>23 :</span><small>Hours</small></div>
-                    <div><span>34 :</span><small>Mins</small></div>
-                    <div><span>57</span><small>Sec</small></div>
-                </div>
-            </div>
+    <!-- FEATURED PRODUCT -->
+    <div class="product featured">
+      <img src="images/four apple.png" alt="">
+      <button class="add-cart">Add to Cart</button>
 
-            <!-- SMALL PRODUCT CARDS -->
-            <div class="product-cardd">
-                <img src="images/chinese gabbage.png" alt="">
-                <a href="product-details.html?id=chanise-cabbage"><h4>Chinese Cabbage</h4></a>
-                <p class="price">$12.00</p>
-                <span class="stars">⭐⭐⭐⭐☆</span>
-            </div>
+      <h2>Chinese cabbage</h2>
+      <p class="price">$12.00 <span class="old-price">$24.00</span></p>
+      <p class="rating">★★★★★ <span style="color:#9ca3af;">(524 Feedback)</span></p>
 
-            <div class="product-cardd">
-                <img src="images/green lettuce.png" alt="">
-                <a href="product-details.html?id=green-lettuce"><h4>Green Lettuce</h4></a>
-                <p class="price">$9.00</p>
-                <span class="stars">⭐⭐⭐⭐</span>
-            </div>
+      <p style="margin-top:14px;color:#6b7280;">Hurry up! Offer ends in:</p>
 
-            <div class="product-cardd">
-                <img src="images/egg plant.png" alt="">
-                <a href="product-details.html?id=eggplant"><h4>Eggplant</h4></a>
-                <p class="price">$34.00</p>
-                <span class="stars">⭐⭐⭐⭐</span>
-            </div>
+      <div class="countdown">
+        <div><span id="days">01</span><br><small>DAYS</small></div>
+        <div><span id="hours">23</span><br><small>HRS</small></div>
+        <div><span id="minutes">34</span><br><small>MINS</small></div>
+        <div><span id="seconds">57</span><br><small>SECS</small></div>
+      </div>
+    </div>
 
-            <div class="product-cardd">
-                <img src="images/fresh couliflower.png" alt="">
-                <a href="product-details.html?id=fresh-cauliflower"><h4>Fresh Cauliflower</h4></a>
-                <p class="price">$12.00</p>
-                <span class="stars">⭐⭐⭐⭐☆</span>
-            </div>
+    <!-- PRODUCTS -->
+    <div class="product">
+      <img src="images/chinese gabbage.png">
+      <p class="name">Chinese cabbage</p>
+      <p class="price">$12.00</p>
+      <p class="rating">★★★★☆</p>
+    </div>
 
-            <div class="product-cardd">
-                <img src="images/green copsicum.png" alt="">
-                <span class="sale-badgee">Sale 50%</span>
-                <a href="product-details.html?id=green-capsicum"><h4>Green Capsicum</h4></a>
-                <p class="price">$9.00 <span class="old-price">$26.00</span></p>
-                <span class="stars">⭐⭐⭐⭐</span>
-            </div>
+    <div class="product">
+      <img src="images/green lettuce.png">
+      <p class="name">Green Lettuce</p>
+      <p class="price">$9.00</p>
+      <p class="rating">★★★★☆</p>
+    </div>
 
-            <div class="product-cardd">
-                <img src="images/green chili.png" alt="">
-                <a href="product-details.html?id=green-chili"><h4>Green Chili</h4></a>
-                <p class="price">$34.00</p>
-                <span class="stars">⭐⭐⭐⭐☆</span>
-            </div>
+    <div class="product">
+      <img src="images/egg plant.png">
+      <p class="name">Eggplant</p>
+      <p class="price">$34.00</p>
+      <p class="rating">★★★★★</p>
+    </div>
 
-            <div class="product-cardd">
-                <img src="images/big potatoes.png" alt="">
-                <a href="product-details.html?id=big-potatoes"><h4>Big Potatoe</h4></a>
-                <p class="price">$12.00</p>
-                <span class="stars">⭐⭐⭐⭐☆</span>
-            </div>
-            <div class="product-cardd">
-                <img src="images/corn.png" alt="">
-                <a href="product-details.html?id=corn"><h4>Corn</h4></a>
-                <p class="price">$12.00</p>
-                <span class="stars">⭐⭐⭐⭐☆</span>
-            </div>
+    <div class="product">
+      <img src="images/fresh couliflower.png">
+      <p class="name">Fresh Cauliflower</p>
+      <p class="price">$12.00</p>
+      <p class="rating">★★★★☆</p>
+    </div>
 
-            <div class="product-cardd">
-                <img src="images/red chili.png" alt="">
-                <a href="product-details.html?id=red-chili"><h4>Red Chili</h4></a>
-                <p class="price">$12.00</p>
-                <span class="stars">⭐⭐⭐⭐☆</span>
-            </div>
+    <div class="product">
+      <span class="sale">Sale 50%</span>
+      <img src="images/green copsicum.png">
+      <p class="name">Green Capsicum</p>
+      <p class="price">$9.00 <span class="old-price">$20.99</span></p>
+      <p class="rating">★★★★☆</p>
+    </div>
 
-            <div class="product-cardd">
-                <img src="images/red tomatoe.png" alt="">
-                <a href="product-details.html?id=red-tomatoes"><h4>Red Tomatoes</h4></a>
-                <p class="price">$9.00</p>
-                <span class="stars">⭐⭐⭐⭐☆</span>
-            </div>
+    <div class="product">
+      <img src="images/green chili.png">
+      <p class="name">Green Chili</p>
+      <p class="price">$34.00</p>
+      <p class="rating">★★★★★</p>
+    </div>
 
-            <div class="product-cardd">
-                <img src="images/sunja mango.png" alt="">
-                <a href="product-details.html?id=surjapur-mango"><h4>Surjapur Mango</h4></a>
-                <p class="price">$34.00</p>
-                <span class="stars">⭐⭐⭐⭐☆</span>
-            </div>
-        </div>
+    <div class="product">
+      <img src="images/big potatoes.png">
+      <p class="name">Big Potatoes</p>
+      <p class="price">$12.00</p>
+      <p class="rating">★★★★☆</p>
+    </div>
+
+    <div class="product">
+      <img src="images/corn.png">
+      <p class="name">Corn</p>
+      <p class="price">$12.00</p>
+      <p class="rating">★★★★☆</p>
+    </div>
+
+    <div class="product">
+      <img src="images/red chili.png">
+      <p class="name">Red Chili</p>
+      <p class="price">$12.00</p>
+      <p class="rating">★★★★★</p>
+    </div>
+
+    <div class="product">
+      <span class="sale">Sale 50%</span>
+      <img src="images/red tomatoe.png">
+      <p class="name">Red Tomatoes</p>
+      <p class="price">$9.00 <span class="old-price">$20.99</span></p>
+      <p class="rating">★★★★★</p>
+    </div>
+
+    <div class="product">
+      <img src="images/sunja mango.png">
+      <p class="name">Surajpur Mango</p>
+      <p class="price">$34.00</p>
+      <p class="rating">★★★★★</p>
+    </div>
+
+  </div>
     </section>
 
     <!-- promo section -->
