i added a test to my index and style it

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <div class="overlay1"></div>
             <div class="hero-text">
                 <h1>Fresh & Healthy <br> Organic Food</h1>
-                <!-- <p class="sale">Sale up to <span>30% OFF</span></p> -->
+                <p class="saleo">Sale up to <span>30% OFF</span></p>
                 <p class="class-shipping">Free shipping on all your order.</p>
                 <button class="bitn">Shop now</button>
             </div>
