worked on contact page

--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
             <li><a href="pages.html">Pages <img src="images/Vector (1).png" alt=""></a></li>
             <li><a href="blog.html">Blog <img src="images/Vector (1).png" alt=""></a></li>
             <li><a href="about.html">About Us</a></li>
-            <li><a href="contact us.html">Contact Us</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
         </ul>
     </nav>
 
