--- a/product-details.html
+++ b/product-details.html
@@ -181,7 +181,7 @@
             <li><a href="pages.html">Pages</a></li>
             <li><a href="blog.html">Blog</a></li>
             <li><a href="about.html">About Us</a></li>
-            <li><a href="contact us.html">Contact Us</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
         </ul>
     </nav>
 
